--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "m-delivery",
   "private": true,
+  "homepage": "https://m-delivery.vercel.app/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -10,8 +11,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "normalize.css": "^8.0.1",
+    "notiflix": "^3.2.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
+    "react-router-dom": "^6.14.1",
+    "react-scripts": "^5.0.1",
+    "styled-components": "^5.3.11",
+    "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
